--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -100,12 +100,18 @@ group "excessb64" {
     .include(try=true; priority=1; duplicate=merge) "$LOCAL_CONFDIR/local.d/excessb64_group.conf"
     .include(try=true; priority=10) "$LOCAL_CONFDIR/override.d/excessb64_group.conf"
 }
+group "external-services" {
+    .include "$CONFDIR/scores.d/external-services_group.conf"
+    .include(try=true; priority=1; duplicate=merge) "$LOCAL_CONFDIR/local.d/external-services_group.conf"
+    .include(try=true; priority=10) "$LOCAL_CONFDIR/override.d/external-services_group.conf"
+}
 
 # Not defined by default
 group "neural" {
     .include(try=true; priority=1; duplicate=merge) "$LOCAL_CONFDIR/local.d/neural_group.conf"
     .include(try=true; priority=10) "$LOCAL_CONFDIR/override.d/neural_group.conf"
 }
+
 
 .include(try=true; priority=1; duplicate=merge) "$LOCAL_CONFDIR/local.d/groups.conf"
 .include(try=true; priority=10) "$LOCAL_CONFDIR/override.d/groups.conf"
