[Fix] external services config

--- a/conf/modules.d/external-services.conf
+++ b/conf/modules.d/external-services.conf
@@ -13,7 +13,7 @@
 #
 # See https://rspamd.com/doc/tutorials/writing_rules.html for details
 
-antivirus {
+external-services {
   # multiple scanners could be checked, for each we create a configuration block with an arbitrary name
   clamav {
     # If set force this action if any virus is found (default unset: no action is forced)
@@ -37,7 +37,7 @@ antivirus {
     # servers to query (if port is unspecified, scanner-specific default is used)
     # can be specified multiple times to pool servers
     # can be set to a path to a unix socket
-    # Enable this in local.d/antivirus.conf
+    # Enable this in local.d/external-services.conf
     #servers = "127.0.0.1:3310";
     # if `patterns` is specified virus name will be matched against provided regexes and the related
     # symbol will be yielded if a match is found. If no match is found, default symbol is yielded.
@@ -75,59 +75,58 @@ antivirus {
     whitelist = "/etc/rspamd/antivirus.wl";
   }
 
+  dcc {
 
-  .include(try=true,priority=5) "${DBDIR}/dynamic/antivirus.conf"
-  .include(try=true,priority=1,duplicate=merge) "$LOCAL_CONFDIR/local.d/antivirus.conf"
-  .include(try=true,priority=10) "$LOCAL_CONFDIR/override.d/antivirus.conf"
-}
+    symbol = "DCC_BULK_V";
+    message = '${SCANNER}: bulk messages found: "${VIRUS}"';
+    type = "dcc";
+    enabled = false;
+    #servers = "127.0.0.1:10045";
 
-dcc {
-
-  symbol = "DCC_BULK_V";
-  message = '${SCANNER}: bulk messages found: "${VIRUS}"';
-  type = "dcc";
-  enabled = false;
-  #servers = "127.0.0.1:10045";
-
-  # `whitelist` points to a map of IP addresses. Mail from these addresses is not scanned.
-  whitelist = "/etc/rspamd/antivirus.wl";
-}
-pyzor {
-
-  symbol = "PYZOR_V"
-  message = '${SCANNER}: bulk messages found: "${VIRUS}"';
-  type = "pyzor";
-  log_clean = true;
-  enabled = false;
-  #servers = "127.0.0.1:5953";
-
-  # `whitelist` points to a map of IP addresses. Mail from these addresses is not scanned.
-  whitelist = "/etc/rspamd/antivirus.wl";
-}
-razor {
-
-  symbol = "RAZOR_V"
-  type = "razor";
-  log_clean = true;
-  enabled = false;
-  #servers = "127.0.0.1:9192";
-
-  # `whitelist` points to a map of IP addresses. Mail from these addresses is not scanned.
-  whitelist = "/etc/rspamd/antivirus.wl";
-}
-spamassassin {
-
-  symbol = "SPAMD_V"
-  type = "spamassassin";
-  log_clean = true;
-  enabled = false;
-  #servers = "127.0.0.1:783";
-  patterns {
-    # symbol_name = "pattern";
-    #SPAMD_NIXSPAM_IXHASH = "^NIXSPAM_IXHASH$";
-    #SPAMD_GENERIC_IXHASH = "^GENERIC_IXHASH$";
-    #SPAMD_RDNS_NONE = "^RDNS_NONE$";
+    # `whitelist` points to a map of IP addresses. Mail from these addresses is not scanned.
+    whitelist = "/etc/rspamd/antivirus.wl";
   }
-  # `whitelist` points to a map of IP addresses. Mail from these addresses is not scanned.
-  whitelist = "/etc/rspamd/antivirus.wl";
+  pyzor {
+
+    symbol = "PYZOR_V"
+    message = '${SCANNER}: bulk messages found: "${VIRUS}"';
+    type = "pyzor";
+    log_clean = true;
+    enabled = false;
+    #servers = "127.0.0.1:5953";
+
+    # `whitelist` points to a map of IP addresses. Mail from these addresses is not scanned.
+    whitelist = "/etc/rspamd/antivirus.wl";
+  }
+  razor {
+
+    symbol = "RAZOR_V"
+    type = "razor";
+    log_clean = true;
+    enabled = false;
+    #servers = "127.0.0.1:9192";
+
+    # `whitelist` points to a map of IP addresses. Mail from these addresses is not scanned.
+    whitelist = "/etc/rspamd/antivirus.wl";
+  }
+  spamassassin {
+
+    symbol = "SPAMD_V"
+    type = "spamassassin";
+    log_clean = true;
+    enabled = false;
+    #servers = "127.0.0.1:783";
+    patterns {
+      # symbol_name = "pattern";
+      #SPAMD_NIXSPAM_IXHASH = "^NIXSPAM_IXHASH$";
+      #SPAMD_GENERIC_IXHASH = "^GENERIC_IXHASH$";
+      #SPAMD_RDNS_NONE = "^RDNS_NONE$";
+    }
+    # `whitelist` points to a map of IP addresses. Mail from these addresses is not scanned.
+    whitelist = "/etc/rspamd/antivirus.wl";
+  }
+
+  .include(try=true,priority=5) "${DBDIR}/dynamic/external-services.conf"
+  .include(try=true,priority=1,duplicate=merge) "$LOCAL_CONFDIR/local.d/external-services.conf"
+  .include(try=true,priority=10) "$LOCAL_CONFDIR/override.d/external-services.conf"
 }
