[Minor] External Services - oletools result matching, sample config

--- a/conf/modules.d/external-services.conf
+++ b/conf/modules.d/external-services.conf
@@ -14,6 +14,9 @@
 # See https://rspamd.com/doc/tutorials/writing_rules.html for details
 
 external-services {
+
+  /* Commented Out
+
   # multiple scanners could be checked, for each we create a configuration block with an arbitrary name
   clamav {
     # If set force this action if any virus is found (default unset: no action is forced)
@@ -80,52 +83,246 @@ external-services {
     symbol = "DCC_BULK_V";
     message = '${SCANNER}: bulk messages found: "${VIRUS}"';
     type = "dcc";
-    enabled = false;
+    log_clean = true;
     #servers = "127.0.0.1:10045";
 
+    # if `patterns` is specified virus name will be matched against provided regexes and the related
+    # symbol will be yielded if a match is found. If no match is found, default symbol is yielded.
+    patterns {
+      # symbol_name = "pattern";
+    }
     # `whitelist` points to a map of IP addresses. Mail from these addresses is not scanned.
     whitelist = "/etc/rspamd/antivirus.wl";
   }
+
   pyzor {
 
     symbol = "PYZOR_V"
     message = '${SCANNER}: bulk messages found: "${VIRUS}"';
     type = "pyzor";
     log_clean = true;
-    enabled = false;
-    #servers = "127.0.0.1:5953";
+    servers = "127.0.0.1:5953";
 
-    # `whitelist` points to a map of IP addresses. Mail from these addresses is not scanned.
-    whitelist = "/etc/rspamd/antivirus.wl";
-  }
-  razor {
-
-    symbol = "RAZOR_V"
-    type = "razor";
-    log_clean = true;
-    enabled = false;
-    #servers = "127.0.0.1:9192";
-
-    # `whitelist` points to a map of IP addresses. Mail from these addresses is not scanned.
-    whitelist = "/etc/rspamd/antivirus.wl";
-  }
-  spamassassin {
-
-    symbol = "SPAMD_V"
-    type = "spamassassin";
-    log_clean = true;
-    enabled = false;
-    #servers = "127.0.0.1:783";
+    # if `patterns` is specified virus name will be matched against provided regexes and the related
+    # symbol will be yielded if a match is found. If no match is found, default symbol is yielded.
     patterns {
       # symbol_name = "pattern";
-      #SPAMD_NIXSPAM_IXHASH = "^NIXSPAM_IXHASH$";
-      #SPAMD_GENERIC_IXHASH = "^GENERIC_IXHASH$";
-      #SPAMD_RDNS_NONE = "^RDNS_NONE$";
     }
     # `whitelist` points to a map of IP addresses. Mail from these addresses is not scanned.
     whitelist = "/etc/rspamd/antivirus.wl";
   }
 
+  razor {
+
+    symbol = "RAZOR_V"
+    type = "razor";
+    log_clean = true;
+    servers = "127.0.0.1:9192";
+
+    # if `patterns` is specified virus name will be matched against provided regexes and the related
+    # symbol will be yielded if a match is found. If no match is found, default symbol is yielded.
+    patterns {
+      # symbol_name = "pattern";
+    }
+    # `whitelist` points to a map of IP addresses. Mail from these addresses is not scanned.
+    whitelist = "/etc/rspamd/antivirus.wl";
+  }
+
+  spamassassin {
+
+    symbol = "SPAMD_V"
+    type = "spamassassin";
+    log_clean = true;
+    servers = "10.0.4.30:783";
+
+    # if `patterns` is specified virus name will be matched against provided regexes and the related
+    # symbol will be yielded if a match is found. If no match is found, default symbol is yielded.
+    patterns {
+      # symbol_name = "pattern";
+      SPAMD_NIXSPAM_IXHASH = "^NIXSPAM_IXHASH$";
+      SPAMD_GENERIC_IXHASH = "^GENERIC_IXHASH$";
+      SPAMD_OLEMACRO = "^OLEMACRO$";
+      SPAMD_OLEMACRO_MALICE = "^OLEMACRO_MALICE$";
+      SPAMD_OLEMACRO_RENAME = "^OLEMACRO_RENAME$";
+      SPAMD_OLEMACRO_ZIP_PW = "^OLEMACRO_ZIP_PW$";
+      SPAMD_OLEMACRO_ENCRYPTED = "^OLEMACRO_ENCRYPTED$";
+    }
+    # `whitelist` points to a map of IP addresses. Mail from these addresses is not scanned.
+    whitelist = "/etc/rspamd/antivirus.wl";
+  }
+
+  Symantec {
+    symbol = "SYMANTEC_ICAP"
+    type = "icap";
+    log_clean = true;
+    #servers = "127.0.0.1:1344";
+    scheme = "avscan";
+
+    mime_parts_filter_regex {
+      # symbol_name = "pattern";
+      DOC1 = "^invoice.*\.doc$";
+      #GEN1 = "application\/octet-stream";
+      DOC2 = "application\/msword";
+      DOC3 = "application\/vnd\.ms-word.*";
+      XLS = "application\/vnd\.ms-excel.*";
+      PPT = "application\/vnd\.ms-powerpoint.*";
+      GEN2 = "application\/vnd\.openxmlformats-officedocument.*";
+    }
+
+    mime_parts_filter_ext {
+      # symbol_name = "pattern";
+      doc = "doc";
+      dot = "dot";
+      docx = "docx";
+      dotx = "dotx";
+      docm = "docm";
+      dotm = "dotm";
+      xls = "xls";
+      xlt = "xlt";
+      xla = "xla";
+      xlsx = "xlsx";
+      xltx = "xltx";
+      xlsm = "xlsm";
+      xltm = "xltm";
+      xlam = "xlam";
+      xlsb = "xlsb";
+      ppt = "ppt";
+      pot = "pot";
+      pps = "pps";
+      ppa = "ppa";
+      pptx = "pptx";
+      potx = "potx";
+      ppsx = "ppsx";
+      ppam = "ppam";
+      pptm = "pptm";
+      potm = "potm";
+      ppsm = "ppsm";
+    }
+
+    # X-Infection-Found: Type=2; Resolution=2; Threat=Container size violation
+    # X-Infection-Found: Type=2; Resolution=2; Threat=Encrypted container violation;
+
+    # if `patterns` is specified virus name will be matched against provided regexes and the related
+    # symbol will be yielded if a match is found. If no match is found, default symbol is yielded.
+    patterns {
+      # symbol_name = "pattern";
+      SYMANTEC_ICAP_SIZE_LIMIT = "^Container size violation$";
+      SYMANTEC_ICAP_ENCR_FILE = "^Encrypted container violation$";
+    }
+
+    # `whitelist` points to a map of IP addresses. Mail from these addresses is not scanned.
+    whitelist = "/etc/rspamd/antivirus.wl";
+  }
+  Sophos {
+    symbol = "SOPHOS_ICAP"
+    type = "icap";
+    log_clean = true;
+    #servers = "127.0.0.1:4020";
+    scheme = "sophos";
+
+    mime_parts_filter_regex {
+      # symbol_name = "pattern";
+      DOC1 = "^invoice.*\.doc$";
+      #GEN1 = "application\/octet-stream";
+      DOC2 = "application\/msword";
+      DOC3 = "application\/vnd\.ms-word.*";
+      XLS = "application\/vnd\.ms-excel.*";
+      PPT = "application\/vnd\.ms-powerpoint.*";
+      GEN2 = "application\/vnd\.openxmlformats-officedocument.*";
+    }
+
+    mime_parts_filter_ext {
+      # symbol_name = "pattern";
+      doc = "doc";
+      dot = "dot";
+      docx = "docx";
+      dotx = "dotx";
+      docm = "docm";
+      dotm = "dotm";
+      xls = "xls";
+      xlt = "xlt";
+      xla = "xla";
+      xlsx = "xlsx";
+      xltx = "xltx";
+      xlsm = "xlsm";
+      xltm = "xltm";
+      xlam = "xlam";
+      xlsb = "xlsb";
+      ppt = "ppt";
+      pot = "pot";
+      pps = "pps";
+      ppa = "ppa";
+      pptx = "pptx";
+      potx = "potx";
+      ppsx = "ppsx";
+      ppam = "ppam";
+      pptm = "pptm";
+      potm = "potm";
+      ppsm = "ppsm";
+    }
+
+    # `whitelist` points to a map of IP addresses. Mail from these addresses is not scanned.
+    whitelist = "/etc/rspamd/antivirus.wl";
+  }
+  oletools {
+    symbol = "OLETOOLS_V"
+    type = "oletools";
+    log_clean = true;
+    #servers = "127.0.0.1:5954";
+
+    # Lua patterns! (possible flags A,W,X)
+    oletools_flags = "A.X";
+
+    mime_parts_filter_regex {
+      # symbol_name = "pattern";
+      DOC1 = "^invoice.*\.doc";
+      #GEN1 = "application\/octet-stream";
+      DOC2 = "application\/msword";
+      DOC3 = "application\/vnd\.ms-word.*";
+      XLS = "application\/vnd\.ms-excel.*";
+      PPT = "application\/vnd\.ms-powerpoint.*";
+      GEN2 = "application\/vnd\.openxmlformats-officedocument.*";
+    }
+
+    mime_parts_filter_ext {
+      # symbol_name = "pattern";
+      doc = "doc";
+      dot = "dot";
+      docx = "docx";
+      dotx = "dotx";
+      docm = "docm";
+      dotm = "dotm";
+      xls = "xls";
+      xlt = "xlt";
+      xla = "xla";
+      xlsx = "xlsx";
+      xltx = "xltx";
+      xlsm = "xlsm";
+      xltm = "xltm";
+      xlam = "xlam";
+      xlsb = "xlsb";
+      ppt = "ppt";
+      pot = "pot";
+      pps = "pps";
+      ppa = "ppa";
+      pptx = "pptx";
+      potx = "potx";
+      ppsx = "ppsx";
+      ppam = "ppam";
+      pptm = "pptm";
+      potm = "potm";
+      ppsm = "ppsm";
+    }
+
+    # if `patterns` is specified virus name will be matched against provided regexes and the related
+    # symbol will be yielded if a match is found. If no match is found, default symbol is yielded.
+    patterns {
+      # symbol_name = "pattern";
+    }
+    # `whitelist` points to a map of IP addresses. Mail from these addresses is not scanned.
+    whitelist = "/etc/rspamd/antivirus.wl";
+  }
+  */
   .include(try=true,priority=5) "${DBDIR}/dynamic/external-services.conf"
   .include(try=true,priority=1,duplicate=merge) "$LOCAL_CONFDIR/local.d/external-services.conf"
   .include(try=true,priority=10) "$LOCAL_CONFDIR/override.d/external-services.conf"
